--- a/style.css
+++ b/style.css
@@ -1,109 +1,583 @@
-.big-name {
+.topper {
+    background-image: url(http://miriadna.com/desctopwalls/images/max/Radiant-sunrise.jpg);
+    height: 100vh;
+    padding-top: 40px;
+    border-style: solid;
+    border-color: white;
+    border-width: 30px 30px 30px 30px;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;                      /* <------ */
+    background-repeat: no-repeat;
+    background-position: center center;      
+}
+
+@media screen and (max-width: 500px) and (min-width:0px) {
+
+    .topper{
+        border-bottom-width: 15px;
+    }
+
+}
+
+.topper h1 {
+    font-family: 'Cinzel', serif;
     color: white;
-    font-family: 'Caesar Dressing', cursive;
+    font-size: 40px;
     text-align: center;
+    padding-top: 2vw;
+    letter-spacing: 4px;
+    word-spacing: 9px;
+    text-shadow: 0 0 3px white;
 }
 
-.top-black {
-    background-color: black;
-    height: 130px;
-    width: 100%;
+.topper h2 {
+    font-family: 'Rufina', serif;
+    color: white;
+    font-size: 35px;
+    text-align: center;
+    letter-spacing: 4px;
+    text-shadow: 0 0 3px white;
+
 }
 
-.pic-skating {
-    width: 100%;
-    opacity: .4;
-   
+.topper h5 {
+    font-family: 'Cinzel', serif;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 1px;
+    word-spacing: 5px;
+    text-shadow: 0 0 2px white;
 }
 
-.soapcolor {
-    background-image: url(https://ak2.picdn.net/shutterstock/videos/20188009/thumb/1.jpg?);
+
+
+.filler1 {
+    padding-top: 60vh;
+}
+
+.fa {
+    display:inline-block;
+    font-size: 35px;
+    line-height: 50px;
+    color:white;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    vertical-align: bottom;
+}
+
+.fa:hover {
+    color: gray;
+}
+
+.pics {
+    border-style: solid;
+    border-color: white;
+    border-width: 0px;
+    background-color: white;
+}
+
+.square {
+    background-image: url(http://i.imgur.com/lFa1Kfk.jpg);
+    padding: 20px;
+    border-style: solid;
+    border-color: white;
+    border-width: 15px 30px 15px 30px;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;                      /* <------ */
+    background-repeat: no-repeat;
+    background-position: center center; 
+    /*height: 80vh;*/
+}
+
+
+.sq1 {
+    background-image: url(http://i.imgur.com/mBQnEfL.jpg);
+    margin-left: auto;
+}
+
+.sq2 {
+    background-image: url(http://i.imgur.com/oStfxHz.jpg);
+    margin: auto;
+}
+
+/*.sq3 {
+    background-image: url(http://i.imgur.com/OjklFOA.jpg );
+    margin: auto;
+}
+.sq4 {
+    background-image: url(http://i.imgur.com/fGTkkeL.png);
+    margin-right: auto;
+}*/
+
+.pics h1 {
+    font-family: 'Cinzel', serif;
+    color: white;
+    font-size: 34px;
+    text-align: center;
+    letter-spacing: 3px;
+    word-spacing: 9px;
+    text-shadow: 0 0 3px white;
+}
+
+.pics p {
+    font-family: 'Rufina', serif;
+    color: white;
+    text-align: left;
+    text-shadow: 0 0 1px gray;
+    padding-top: 2.6vw;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
+    height: auto;
+}
+
+.h3font {
+    font-size: 2.0rem;
+}
+
+.pics h4 {
+    font-family: 'Rufina', serif;
+    color: white;
+    text-align: center;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    text-shadow: 0 0 1px white;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-top: 0.5vw;
+    height: auto;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.mecircle {
+    width: 200px;
+	height: 200px;
+	background: black;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+    border-radius: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    background-image: url(assets/me-bw.jpg);
+    background-size: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    box-shadow: 0 0 1px 2px white;
+}
+
+#langs {
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: gray;
+    -moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+    border-radius: 8px;
+    opacity: 0.9;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+}
+
+/*.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+*/
+
+.projects {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/d/d1/Mount_Everest_as_seen_from_Drukair2_PLW_edit.jpg);
+    padding-top: 30px;
+    padding-bottom: 50px;
+    border-style: solid;
+    border-color: white;
+    border-width: 15px 30px 30px 30px;
+    background-attachment: fixed;
+    background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;      
 }
-.bio {
+
+.projects h1 {
+    font-family: 'Cinzel', serif;
     color: white;
-    weight: bold;
-    font-family: 'Caesar Dressing', cursive;
-    font-size: 75px;
+    font-size: 34px;
     text-align: center;
-    
-}
-.portfolio-row {
-   background-color: black;
-   height: 80px;
-   width: cover;
+    letter-spacing: 3px;
+    word-spacing: 9px;
+    text-shadow: 0 0 3px white;
 }
 
-.portfolio-text {
+.projects h2 {
+    font-family: 'Rufina', serif;
     color: white;
-    weight: bold;
-    font-family: 'Caesar Dressing', cursive;
-    font-size: 45px;
+    font-size: 50px;
     text-align: center;
+    letter-spacing: 4px;
+    text-shadow: 0 0 3px white;
+    max-width: 100%
+
 }
 
-.port-pic {
-    width: 100%;
-    height:200px;
-}
-
-.pic-container {
-    flex-direction:column;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 15px;
-    
-}
-
-.pic-complainer {
-    flex-direction: column;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 15px;
-    
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
-    display: flex;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-a:hover:not(.active) {
-    background-color:plum;
-}
-
-.active {
-background-color:plum;
-}
 .contact {
-    color: black;
-    font-family: 'Caesar Dressing', cursive;
-    text-align: center; 
-}
-.linked {
-    width: 100px;
-    length: 100px;
+    background-image: url(http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/3v/9b/p03v9b0v.jpg);
+    padding-top: 30px;
+    border-style: solid;
+    border-color: white;
+    border-width: 0px 30px 30px 30px;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;      
 }
 
-.git-hub {
-    width: 100px;
-    length: 100px;
+.contact h1 {
+    font-family: 'Cinzel', serif;
+    color: white;
+    font-size: 34px;
+    text-align: center;
+    letter-spacing: 3px;
+    word-spacing: 9px;
+    text-shadow: 0 0 3px white;
+}
+
+.contact h2 {
+    font-family: 'Rufina', serif;
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 4px;
+    text-shadow: 0 0 3px white;
+
+}
+
+.mc {
+    width: 10.5rem;
+    height: 10.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 5px white;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.porte1 {
+    width: 25.5rem;
+	height: 18.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+.porte2 {
+    width: 25.5rem;
+    height: 18.5rem;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+.porte3 {
+    width: 25.5rem;
+    height: 18.5rem;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+.porte4 {
+    width: 25.5rem;
+    height: 18.5rem;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+.porte5 {
+    width: 25.5rem;
+    height: 18.5rem;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+.porte6 {
+    width: 25.5rem;
+    height: 18.5rem;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size:cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px white;
+    max-width: 100%;
+}
+
+#por1 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+#por2 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+#por3 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+#por4 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+#por5 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+#por6 {
+    display: none;
+    opacity: 0;
+    animation: fade 1s infinite;
+
+    width: 25.5rem;
+	height: 17.5rem;
+	background: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 1px 1px black;
+    max-width: 100%;
+}
+
+@keyframes fade {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
+
+.thumbnail:hover {
+    color: black;
+}
+
+.contact h4 {
+    font-family: 'Rufina', serif;
+    color: white;
+    text-align: center;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    text-shadow: 0 0 1px white;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    height: auto;
+    font-size: 2.2rem;
+    margin-bottom: 20px;
+    max-width: 100%;
+}
+
+/* {
+    width: 25.5rem;
+	height: 18.5rem;
+	background: black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    background-image: url();
+    background-size: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
+    background-repeat: no-repeat;
+}*/
+
+.meinfo {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 20px;
+}
+
+#langstwo {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: gray;
+    -moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+    border-radius: 8px;
+    opacity: 0.9;
+    border-style: solid;
+    border-color: white;
+    border-width: 4px;
 }
