--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 .topper {
     background-image: url(http://miriadna.com/desctopwalls/images/max/Radiant-sunrise.jpg);
     height: 100vh;
-    padding-top: 40px;
-    border-style: solid;
-    border-color: white;
-    border-width: 30px 30px 30px 30px;
+    
+    
+    
     background-attachment: fixed;
     background-position: center;
     background-size: cover;                      /* <------ */
@@ -72,19 +71,14 @@
     color: gray;
 }
 
-.pics {
-    border-style: solid;
-    border-color: white;
-    border-width: 0px;
-    background-color: white;
-}
+
 
 .square {
     background-image: url(http://i.imgur.com/lFa1Kfk.jpg);
     padding: 20px;
     border-style: solid;
     border-color: white;
-    border-width: 15px 30px 15px 30px;
+    
     background-attachment: fixed;
     background-position: center;
     background-size: cover;                      /* <------ */
@@ -95,7 +89,7 @@
 
 
 .sq1 {
-    background-image: url(http://i.imgur.com/mBQnEfL.jpg);
+    background-image: url(Chord Collab Photo.PNG);
     margin-left: auto;
 }
 
@@ -164,7 +158,7 @@
     margin-right: auto;
     margin-top: 3vh;
     margin-bottom: 3vh;
-    background-image: url(assets/me-bw.jpg);
+    background-image: url();
     background-size: 100%;
     border-style: solid;
     border-color: white;
@@ -231,6 +225,11 @@
     text-shadow: 0 0 3px white;
     max-width: 100%
 
+}
+
+.profileshot{
+    width: 80%;
+    margin-left: 30px;
 }
 
 .contact {
@@ -301,7 +300,38 @@
     box-shadow: 0 0 1px 1px white;
     max-width: 100%;
 }
+.chord{
+    width: 24.5rem;
+    height: 18rem;
+    margin-top: 2vh;
+    margin-right: auto;
+    margin-left:auto;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+}
 
+.kanban{
+    width: 24.5rem;
+    height: 18rem;
+    margin-top: 2vh;
+    margin-right: auto;
+    margin-left:auto;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+}
+.chatroom{
+    margin-top: 2vh;
+    margin-right: auto;
+    margin-left:auto;
+    width: 24.5rem;
+    height: 18rem;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+   
+}
 .porte2 {
     width: 25.5rem;
     height: 18.5rem;
