--- a/style.css
+++ b/style.css
@@ -1,474 +1,32 @@
 .top{ 
-    background-color: #A5C99C;
-}
-.button-row{
-    background-color: #A5C99C;  
-    padding-bottom: 10px;
-}
-.pic:hover .overlay {
-    opacity: 0.85;
-}
-.btn:hover {
-    color: #4C1580;
-}
-.overlay {
-    position: relative;
-    
-    top: 0;
-    bottom: 0;
-    left: 5%;
-    right: 0;
-    width: 24.5rem;
-    height: 18rem;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #A5C99C;
-}
-.text {
-    color: white;
-    font-size: 15px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-.topper {
-    background-image: url(http://miriadna.com/desctopwalls/images/max/Radiant-sunrise.jpg);
-    height: 100vh;
-    
-    
-    
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;                      /* <------ */
-    background-repeat: no-repeat;
-    background-position: center center;      
-}
-
-@media screen and (max-width: 500px) and (min-width:0px) {
-
-    .topper{
-        border-bottom-width: 15px;
+        background-color: #A5C99C;
     }
-
-}
-
-.topper h1 {
-    font-family: 'Cinzel', serif;
-    color: white;
-    font-size: 40px;
-    text-align: center;
-    padding-top: 2vw;
-    letter-spacing: 4px;
-    word-spacing: 9px;
-    text-shadow: 0 0 3px white;
-}
-
-.topper h2 {
-    font-family: 'Rufina', serif;
-    color: white;
-    font-size: 35px;
-    text-align: center;
-    letter-spacing: 4px;
-    text-shadow: 0 0 3px white;
-
-}
-
-.topper h5 {
-    font-family: 'Cinzel', serif;
-    color: white;
-    font-size: 20px;
-    text-align: center;
-    letter-spacing: 1px;
-    word-spacing: 5px;
-    text-shadow: 0 0 2px white;
-}
-
-
-
-.filler1 {
-    padding-top: 60vh;
-}
-
-.fa {
-    display:inline-block;
-    font-size: 35px;
-    line-height: 50px;
-    color:white;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    vertical-align: bottom;
-}
-
-.fa:hover {
-    color: gray;
-}
-
-
-
-.square {
-    background-image: url(http://i.imgur.com/lFa1Kfk.jpg);
-    padding: 20px;
-    border-style: solid;
-    border-color: white;
-    
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;                      /* <------ */
-    background-repeat: no-repeat;
-    background-position: center center; 
-    /*height: 80vh;*/
-}
-
-
-.sq1 {
-    background-image: url(Chord Collab Photo.PNG);
-    margin-left: auto;
-}
-
-.sq2 {
-    background-image: url(http://i.imgur.com/oStfxHz.jpg);
-    margin: auto;
-}
-
-/*.sq3 {
-    background-image: url(http://i.imgur.com/OjklFOA.jpg );
-    margin: auto;
-}
-.sq4 {
-    background-image: url(http://i.imgur.com/fGTkkeL.png);
-    margin-right: auto;
-}*/
-
-.pics h1 {
-    font-family: 'Cinzel', serif;
-    color: white;
-    font-size: 34px;
-    text-align: center;
-    letter-spacing: 3px;
-    word-spacing: 9px;
-    text-shadow: 0 0 3px white;
-}
-
-.pics p {
-    font-family: 'Rufina', serif;
-    color: white;
-    text-align: left;
-    text-shadow: 0 0 1px gray;
-    padding-top: 2.6vw;
-    padding-left: 2.5vw;
-    padding-right: 2.5vw;
-    height: auto;
-}
-
-.h3font {
-    font-size: 2.0rem;
-}
-
-.pics h4 {
-    font-family: 'Rufina', serif;
-    color: white;
-    text-align: center;
-    letter-spacing: 1px;
-    word-spacing: 2px;
-    text-shadow: 0 0 1px white;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    padding-top: 0.5vw;
-    height: auto;
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-}
-
-.mecircle {
-    width: 200px;
-	height: 200px;
-	background: black;
-	-moz-border-radius: 100px;
-	-webkit-border-radius: 100px;
-    border-radius: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-    background-image: url();
-    background-size: 100%;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-    box-shadow: 0 0 1px 2px white;
-}
-
-#langs {
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding-top: 10px;
-    padding-bottom: 30px;
-    padding-left: 25px;
-    padding-right: 25px;
-    background-color: gray;
-    -moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-    border-radius: 8px;
-    opacity: 0.9;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-}
-
-/*.row-eq-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display:         flex;
-}
-*/
-
-.projects {
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/d/d1/Mount_Everest_as_seen_from_Drukair2_PLW_edit.jpg);
-    
-    
-    padding: 20px;
-    border-style: solid;
-    border-color: white;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;      
-}
-
-.projects h1 {
-    font-family: 'Cinzel', serif;
-    color: white;
-    font-size: 34px;
-    text-align: center;
-    letter-spacing: 3px;
-    word-spacing: 9px;
-    text-shadow: 0 0 3px white;
-}
-
-.projects h2 {
-    font-family: 'Rufina', serif;
-    color: white;
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 4px;
-    text-shadow: 0 0 3px white;
-    max-width: 100%
-
-}
-
-.profileshot{
-    width: 80%;
-    margin-left: 30px;
-}
-
-.contact {
-    background-image: url(http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/3v/9b/p03v9b0v.jpg);
-    padding: 20px;
-    border-style: solid;
-    border-color: white;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;      
-}
-
-.contact h1 {
-    font-family: 'Cinzel', serif;
-    color: white;
-    font-size: 34px;
-    text-align: center;
-    letter-spacing: 3px;
-    word-spacing: 9px;
-    text-shadow: 0 0 3px white;
-}
-
-.contact h2 {
-    font-family: 'Rufina', serif;
-    color: white;
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 4px;
-    text-shadow: 0 0 3px white;
-
-}
-
-.mc {
-    width: 10.5rem;
-    height: 10.5rem;
-	background: white;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    background-image: url();
-    background-size: 100%;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 1px 5px white;
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.porte1 {
-    width: 25.5rem;
-	height: 18.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    background-image: url();
-    background-size:cover;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 1px 1px white;
-    max-width: 100%;
-}
-.chord{
-    width: 24.5rem;
-    height: 18rem;
-    margin-top: 2vh;
-    
-    border-style: solid;
-    border-color: black;
-    border-width: 4px;
-    margin-left: 10%;
-    
-}
-.chord-panel{
-    width: 24.5rem;
-    height: 7rem;
-    font-family: 'Cinzel', serif;
-    margin-left: 10%;
-}
-
-.kanban{
-    width: 24.5rem;
-    height: 18rem;
-    margin-top: 2vh;
-    
-    border-style: solid;
-    border-color: black;
-    border-width: 4px;
-    margin-left: 10%;
-}
-.kanban-panel{
-    font-family: 'Cinzel', serif;
-    width: 24.5rem;
-    margin-left: 10%;
-}
-.chatroom{
-    margin-top: 2vh;
-    
-    width: 24.5rem;
-    height: 18rem;
-    border-style: solid;
-    border-color: black;
-    border-width: 4px;
-    margin-left: 10%;
+    .button-row{
+        background-color: #A5C99C;  
+        padding-bottom: 10px;
+    }
+     .pic:hover .overlay {
+         opacity: 0.85;
+     }
    
-}
-.chatroom-panel{
-    font-family: 'Cinzel', serif;
-    width: 24.5rem;
-    margin-left: 10%;
-}
-.portfolio{
-    margin-right: -720px;
-}
-.music-app{
-    margin-top: 2vh;
-    margin-left: 10%;
-    width: 24.5rem;
-    height: 18rem;
-    border-style: solid;
-    border-color: black;
-    border-width: 4px;
-}
-.music-panel{
-    font-family: 'Cinzel', serif;
-    width: 24.5rem;
-    margin-left: 10%;
-}
-
-
-
-
-
-
-
-
-
-@keyframes fade {
-  0% { opacity: 0 }
-  100% { opacity: 1 }
-}
-
-.thumbnail:hover {
-    color: black;
-}
-
-.contact h4 {
-    font-family: 'Rufina', serif;
-    color: white;
-    text-align: center;
-    letter-spacing: 1px;
-    word-spacing: 2px;
-    text-shadow: 0 0 1px white;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    height: auto;
-    font-size: 2.2rem;
-    margin-bottom: 20px;
-    max-width: 100%;
-}
-
-/* {
-    width: 25.5rem;
-	height: 18.5rem;
-	background: black;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    background-image: url();
-    background-size: 100%;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-    background-repeat: no-repeat;
-}*/
-
-.meinfo {
-    text-align: center;
-    font-size: 40px;
-    margin-top: 20px;
-}
-
-#langstwo {
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 25px;
-    padding-right: 25px;
-    background-color: gray;
-    -moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-    border-radius: 8px;
-    opacity: 0.9;
-    border-style: solid;
-    border-color: white;
-    border-width: 4px;
-}
+    .btn:hover {
+         color: #4C1580;
+     }
+     .overlay {
+         position: relative;
+         
+         top: 0;
+         bottom: 0;
+        left: 0;
+        left: 5%;
+         right: 0;
+         width: 24.5rem;
+         height: 18rem;
+         opacity: 0;
+         transition: .5s ease;
+        background-color: purple;
+        background-color: #A5C99C;
+     }
+     .text {
+         color: white;
+        }
