--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     }
      .pic:hover .overlay {
          opacity: 0.85;
+         padding-top: -20px;
      }
    
     .btn:hover {
@@ -28,5 +29,30 @@
         background-color: #A5C99C;
      }
      .text {
-         color: white;
+         color: black;
         }
+
+    .pic {
+        height: 200px;
+        width: 300px;
+    }
+    .profileshot {
+        margin-top: -10px;
+        height: 70%;
+        width: 70%;
+        margin-bottom: 20px;
+    }
+    #langs {
+        background-color: whitesmoke;
+    }
+
+    .contact {
+        background-color: whitesmoke;
+    }
+    .meinfo {
+        size: 150%;
+    }
+    .destination {
+        height: 30px;
+        width: 30px;
+    }
