--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .top{ 
-        background-color: #C5C5C5;
+        background-color: whitesmoke;
     }
     .button-row{
         background-color: #A5C99C;  
