--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
         width: 300px;
     }
     .profileshot {
-        margin-top: -10px;
+        margin-top: 10px;
         height: 70%;
         width: 70%;
         margin-bottom: 20px;
@@ -56,3 +56,10 @@
         height: 30px;
         width: 30px;
     }
+.all {
+    background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
+    background-size: 100vh;
+}
+.skills-panel {
+    background: tan;
+}
