--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
     .destination {
         height: 30px;
         width: 30px;
+        border-radius: 20px;
     }
 .all {
     background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
