--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     }
 
     .contact {
-        background-color: whitesmoke;
+        background-color: rgb(223, 118, 118);
     }
     .meinfo {
         size: 150%;
@@ -58,14 +58,9 @@
         width: 30px;
         border-radius: 20px;
     }
-.all {
-    background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
-    background-size: 100vh;
-    background-repeat: no-repeat;
-   
-}
+
 .skills-panel {
-    background: tan;
+    background: rgba(210, 180, 140, 0.56);
 }
 .bottom {
     margin-top: 20px;
@@ -74,5 +69,8 @@
     background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
 }
 .portfolio {
-    background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
+ background-color: #FDE2C0;
+}
+.por{
+    width:300px;
 }
