--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@
         height: 200px;
         width: 300px;
         border: 2px border-style black;
+        
     }
     .profileshot {
         margin-top: 10px;
-        height: 80%;
-        width: 80%;
+        height: 55%;
+        width: 55%;
         margin-bottom: 20px;
+        border-radius: 30px;
     }
     #langs {
         background-color: whitesmoke;
@@ -54,8 +56,8 @@
         size: 150%;
     }
     .destination {
-        height: 30px;
-        width: 30px;
+        height: 40px;
+        width: 40px;
         border-radius: 20px;
     }
 
@@ -67,10 +69,26 @@
 }
 .bio {
     background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .portfolio {
- background-color: #FDE2C0;
+    background-image: url("http://cdn.wonderfulengineering.com/wp-content/uploads/2014/05/brick-wallpaper-15.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 }
 .por{
     width:300px;
+}
+.icons{
+    width: 60px;
+    height: 60px;
+}
+.codeworks {
+    width: 70px;
 }
