--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@
     }
     .profileshot {
         margin-top: 10px;
-        height: 55%;
-        width: 55%;
+        height: 40%;
+        width: 40%;
         margin-bottom: 20px;
         border-radius: 30px;
     }
@@ -91,4 +91,8 @@
 }
 .codeworks {
     width: 70px;
+}
+.panel {
+    background-color: gray;
+    
 }
